feat(tools): douyin download via Playwright CDP, add session log mechanism
- Rewrite download-video.ts: Douyin uses Playwright + CDP instead of yt-dlp
- Add --cdp option (required for Douyin), CDP timeout, invalid URL detection
- Add playwright dependency
- Add session log mechanism (lamarck/sessions/)
- Update AGENTS.md with session log rules and memory guidelines
- Backfill session logs for previous sessions

--- a/lamarck/tools/package.json
+++ b/lamarck/tools/package.json
@@ -6,6 +6,7 @@
 	"scripts": {},
 	"dependencies": {
 		"commander": "^14.0.3",
+		"playwright": "^1.58.1",
 		"yt-dlp-wrap": "^2.3.12"
 	},
 	"devDependencies": {
