feat: add transcribe-audio and generate-image tools, douyin-monitor task
- transcribe-audio.ts: speech-to-text with faster-whisper, supports timestamps
- generate-image.ts: OpenRouter API image generation (Nano Banana default)
- douyin-monitor task: daily scan of 30 seed accounts
- database schema for douyin_accounts and douyin_videos
- .gitignore: exclude videos, transcripts, db files
- session logs for 2026-02-06

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ out.html
 packages/coding-agent/binaries/
 todo.md
 lamarck/tasks/logs/
+
+# Lamarck data (videos, db, transcripts)
+lamarck/data/videos/
+lamarck/data/transcripts/
+lamarck/data/*.db
+lamarck/data/*.db-*
+!lamarck/data/schema.sql
