feat: add monitoring tasks, douyin tools, wanggan skill; update main-session extension
- Add monitoring tasks: hackernews, producthunt, reddit-demands, zhihu-likes
- Add douyin tools: batch-douyin, download-douyin-video, fetch-douyin-videos
- Add wanggan skill for copywriting with references
- Update main-session: send_qq_message tool disabled by default, toggle via /send_qq_message command
- Remove obsolete create-task skill
- Update transcribe-audio, tools index, memory

--- a/lamarck/tools/package.json
+++ b/lamarck/tools/package.json
@@ -5,8 +5,10 @@
 	"type": "module",
 	"scripts": {},
 	"dependencies": {
+		"chrome-remote-interface": "^0.33.3",
 		"commander": "^14.0.3",
 		"playwright": "^1.58.1",
+		"puppeteer-core": "^24.37.2",
 		"yt-dlp-wrap": "^2.3.12"
 	},
 	"devDependencies": {
