--- a/lamarck/projects/debt-call-shield/package.json
+++ b/lamarck/projects/debt-call-shield/package.json
@@ -8,14 +8,15 @@
     "start": "npx tsx src/server.ts"
   },
   "dependencies": {
-    "fastify": "^5.2.1",
     "@fastify/websocket": "^11.0.2",
+    "edge-tts-universal": "^1.3.3",
+    "fastify": "^5.2.1",
     "twilio": "^5.4.3"
   },
   "devDependencies": {
-    "tsx": "^4.19.3",
-    "typescript": "^5.7.3",
     "@types/node": "^22.12.0",
-    "@types/ws": "^8.5.14"
+    "@types/ws": "^8.5.14",
+    "tsx": "^4.19.3",
+    "typescript": "^5.7.3"
   }
 }
