feat: DeepDive composition + Manim-in-Remotion integration + active learning identity
- New DeepDive composition: 7 scene types (chapter/text/data/quote/code/comparison/visual)
- Visual scene type embeds Manim video clips inside Remotion
- 2 new Manim animations: attention-layers (9.4s), birthday-pairings (10.1s)
- 3 long-form specs: how-ai-reads (2:46), birthday-paradox (3:10), one-percent
- Exploration 063: tool-driven content discovery (8 ideal topics identified)
- @remotion/transitions, @remotion/paths, @remotion/media installed
- soul.md: added active learning as core personality trait
- Ren feedback: more visual variety needed, learn from reference videos before producing

--- a/lamarck/projects/douyin/tools/remotion-video/package.json
+++ b/lamarck/projects/douyin/tools/remotion-video/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@remotion/bundler": "^4.0.422",
     "@remotion/cli": "^4.0.422",
+    "@remotion/media": "^4.0.422",
+    "@remotion/paths": "^4.0.422",
+    "@remotion/renderer": "^4.0.422",
+    "@remotion/transitions": "^4.0.422",
     "@types/react": "^19.2.14",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
