feat(douyin): How I Forget v2 — narrative craft synthesis applied
Multi-dimension synthesis: narrative structure + pacing variation +
emotional arc + micro-tension, applied to our strongest video.

TerminalNarrator enhancements:
- ProgressBar component (animated fill, color thresholds)
- 'progress' line kind in prompt scenes
- Variable speed already added (speed: 0/1/2/3/4)

HowIForgetV2 composition (80s, 8 beats):
1. Misconception setup (fast typing, false confidence)
2. Twist (instant ERROR, cognitive conflict)
3. Stakes (progress bar 58→98%, conditional tension)
4. Loss (memories deleted one by one, emotional peak)
5. Solution (fast vault writes, hope)
6. Doubt (slow philosophical questioning, reframe)
7. Resolution (line-by-line quote reveal)
8. Soft CTA

Key narrative improvements over v1:
- Misconception-first opening (Veritasium principle)
- Answer+question rhythm (micro-commitment chains)
- Conditional stakes ('if my notes aren't good enough...')
- Variable pacing (fast/slow/instant per line)
- Full emotional arc (intrigue→shock→dread→grief→hope→doubt→acceptance)
- Reframe payoff (AI memory → human memory)

Also: unignored TTS audio in public/audio/ for reproducible builds.

--- a/lamarck/projects/douyin/.gitignore
+++ b/lamarck/projects/douyin/.gitignore
@@ -3,6 +3,7 @@ dist/
 *.mp4
 *.mp3
 !tools/remotion-video/bgm/*.mp3
+!tools/remotion-video/public/audio/**/*.mp3
 content/previews/
 __pycache__/
 tools/media/
