--- a/lamarck/projects/understand/ci/github-action.yml
+++ b/lamarck/projects/understand/ci/github-action.yml
@@ -43,7 +43,7 @@ jobs:
           echo "Changed lines: $CHANGED"
 
       - name: Generate comprehension questions
-        if: steps.changes.outputs.lines >= (env.UNDERSTAND_MIN_LINES || 20)
+        if: ${{ fromJson(steps.changes.outputs.lines) >= fromJson(vars.UNDERSTAND_MIN_LINES || '20') }}
         env:
           OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
           UNDERSTAND_MODEL: ${{ vars.UNDERSTAND_MODEL || 'anthropic/claude-sonnet-4' }}
@@ -66,7 +66,7 @@ jobs:
           fi
 
       - name: Post PR comment
-        if: steps.changes.outputs.lines >= (env.UNDERSTAND_MIN_LINES || 20)
+        if: ${{ fromJson(steps.changes.outputs.lines) >= fromJson(vars.UNDERSTAND_MIN_LINES || '20') }}
         uses: actions/github-script@v7
         with:
           script: |
